--- a/ESR/intro.tex
+++ b/ESR/intro.tex
@@ -1,7 +1,7 @@
 
 Mathematical models of physical systems are often expressed in terms of Partial Differential Equations (PDEs). In such models uncertainty is often introduced, either through a lack of knowledge of the parameters of the system or via inherent randomness in the system itself. Furthermore, these mathematical models and the associated computer simulations are often simplifications of the actual system leading to possible model misspecification \textcolor{blue}{\cite{girolami2019statistical}}. The numerical algorithms used to simulate such models also induce uncertainty \textcolor{blue}{\cite{conrad2017statistical}}. For example, it is often the case that a numerical method involves a finite-dimensional approximation of the unknown function. The computer simulations of these models can also often be very expensive computationally, and as such, these models are rarely used alone in the modelling procedure. Instead, observational data from the actual physical system via measurements is often incorporated as well. Data from measurements is now becoming increasingly available in almost every area of engineering and science, and failure to consider either the data or the model is clearly suboptimal. The issue of combining knowledge from both the model and data is thus of utmost importance and is often referred to as \textbf{data assimilation}, especially when the underlying mathematical model is a potentially stochastic dynamical system and the data may be time-ordered \textcolor{blue}{\cite{law2015data}}.
 
-The Bayesian formulation of PDE-based models allows one to naturally incorporate all these sources of uncertainty (while still being able to identify the relevant source) and forces one to deal with modelling issues in a clear and precise manner. It allows measurement data to be considered in order to calibrate and tune mathematical models. Moreover, it allows a full characterization of all possible solutions to be found, together with their relative probabilities \textcolor{blue}{\cite{stuart2010inverse}}.
+The Bayesian formulation of PDE-based models naturally incorporates all these sources of uncertainty (while still being able to identify the relevant source) and forces one to deal with modelling issues in a clear and precise manner. It allows measurement data to be considered in order to calibrate and tune mathematical models. Moreover, it allows a full characterization of all possible solutions to be found, together with their relative probabilities \textcolor{blue}{\cite{stuart2010inverse}}.
 
 The statistical formulation of PDE-based models is necessary in many applications in order to handle in a precise manner the uncertainty present in the model. It allows this uncertainty to be propagated forward and gives clear answers for how much trust can be placed in the conclusions of the model. The finite element method (FEM) \textcolor{blue}{\cite{strang1973analysis}} is one of the most widely used methods for numerically approximating the solution of PDEs modelling natural and physical systems. Since FEM is an integral part of the study of many physical systems it is essential that we are able to fully quantify the uncertainty that using FEM introduces to our models and simulations.
 
