--- a/ESR/elliptic_bvp.tex
+++ b/ESR/elliptic_bvp.tex
@@ -342,7 +342,7 @@ The other two terms can be bounded above by utilising the bounds on $\|\Sigma_1-
 \begin{equation}
     \|m^{(1)}_{u|\mathbf{v}}-m^{(2)}_{u|\mathbf{v}}\|_{L^{2}(\Omega)}\leq\tilde{\gamma}h^{2}+\mathcal{O}(h^4)
 \end{equation}
-where $\tilde{\gamma}>0$ is a constant independent of $h$. Similarly one can obtain the following upperbound for the difference of the covariance operators:
+where $\tilde{\gamma}>0$ is a constant independent of $h$. Similarly (see \textcolor{blue}{\nameref{appendix}} for details) one can obtain the following upperbound for the difference of the covariance operators:
 \begin{equation}
     \|\Sigma^{(1)}_{u|\mathbf{v}}-\Sigma^{(2)}_{u|\mathbf{v}}\|_{1}\leq \kappa h^{2}+\mathcal{O}(h^4)
 \end{equation}
