--- a/ESR/appendix.tex
+++ b/ESR/appendix.tex
@@ -2,6 +2,74 @@ In this section we provide the omitted details for the proofs and methodology pr
 
 \subsection{Justification of the conditioning step yielding equation (\ref{conditionalDistnFixed_f}) in Section \textcolor{blue}{\ref{general_framework}}}
 
+We now provide a full justification for the conditioning step yielding equation (\ref{conditionalDistnFixed_f}) in Section \textcolor{blue}{\ref{general_framework}}. The justification essentially follows from Theorem 3.3 in \textcolor{blue}{\cite{owhadi2015conditioning}}. This theorem is given below (we only give the part of the theorem we require): \vspace{10pt}
+
+\begin{theorem}
+    \label{condition_gaussian_hilbert}
+    Consider a Gaussian measure $\mu$ on an orthogonal direct sum $H=H_{1}\oplus H_{2}$ of separable Hilbert spaces with mean $m$ and covariance operator $C$. Then for all $t\in H_2$, the conditional measure $\mu_{t}$ is a Gaussian measure with covariance operator $\mathcal{H}_{1}(C)$, the short of $C$ to $H_{1}$.
+
+    If the covariance operator $C$ is compatible with $H_2$, then for any oblique projection $Q$ in $\mathcal{P}(C,H_2)\neq\emptyset$, the mean $m_t$ of the conditional measure $\mu_t$ is
+    \begin{equation*}
+        m_t = \begin{pmatrix}
+                m_1 + \hat{Q}^{*}(t-m_2) \\
+                t
+              \end{pmatrix}
+    \end{equation*}
+    Where \begin{equation*}
+            Q=\begin{pmatrix}
+                0 & 0 \\
+                \hat{Q} & I
+              \end{pmatrix}
+          \end{equation*}
+   and $\mathcal{P}(C,H_2)$ is the set of (C-symmetric) oblique projections onto $H_2$. \textit{Note: the terms shorted operator, compatible and oblique projections are all defined in} \textcolor{blue}{\cite{owhadi2015conditioning}}.
+\end{theorem}
+To apply this theorem to our problem we note that our pair $(u,\mathcal{I}\mathcal{L}u)^{T}$ lies in the orthogonal direct sum $\mathcal{H}_{1}\oplus\mathcal{H}_{2}$ of the separable Hilbert spaces $\mathcal{H}_{1}:=\mathcal{H}\times\{0\}$ and $\mathcal{H}_{2}:=\{0\}\times\mathbb{R}^{J}$. The corresponding Gaussian measure we are dealing with on this space is given by (\ref{jointInfoDist}). Theorem \textcolor{blue}{\ref{condition_gaussian_hilbert}} states that the conditional distribution is a Gaussian measure with covariance operator being the short of the covariance operator of the distribution (\ref{jointInfoDist}) to $\mathcal{H}_{2}$. This operator,
+\begin{equation*}
+    \begin{pmatrix}
+        V & V\mathcal{L}^{*}\mathcal{I}^{*} \\
+        \mathcal{I}\mathcal{L}V & \mathcal{I}\mathcal{L}V\mathcal{L}^{*}\mathcal{I}^{*}
+    \end{pmatrix}
+\end{equation*}
+is already written in its $(\mathcal{H}_{1},\mathcal{H}_{2})$ partition representation. In the section on shorted operators in \textcolor{blue}{\cite{owhadi2015conditioning}} it is stated that provided the lower right partition of the covariance operator of (\ref{jointInfoDist}) corresponding to the covariance in $\mathcal{H}_{2}$, i.e. $\mathcal{I}\mathcal{L}V(\mathcal{I}\mathcal{L})^{*}$, is invertible then the shorted operator is given by:
+\begin{equation*}
+    \begin{pmatrix}
+        V-V\mathcal{L}^{*}\mathcal{I}^{*}(\mathcal{I}\mathcal{L}V\mathcal{L}^{*}\mathcal{I}^{*})^{-1}\mathcal{I}\mathcal{L}V & 0 \\
+        0 & 0
+    \end{pmatrix}
+\end{equation*}
+We assume the invertibility of this partition. \vspace{10pt}
+
+\begin{remark}
+    This part of the partition reduces to the $J\times J$ matrix $A\Lambda A^{*}$ when we choose the FEM prior and FEM information operator as was discussed in Section \textcolor{blue}{\ref{elliptic_bv_prob}}. The invertibility of this matrix is then equivalent to the invertibility of the Galerkin Stiffness Matrix $A$ (since we assume the entries of $\Lambda$ are non-zero). $\mathbin{\blacklozenge}$
+\end{remark}
+We thus see that the conditional distribution (\ref{conditionalDistnFixed_f}) has the correct covariance operator. Theorem \textcolor{blue}{\ref{condition_gaussian_hilbert}} also goes on to give the mean of the conditional distribution in the case that the covariance operator of the joint distribution is compatible with $H_{2}$. For our problem this is in fact the case as we now show. We first denote the covariance operator of the joint distribution by:
+\begin{equation*}
+    \begin{pmatrix}
+        V & V\mathcal{L}^{*}\mathcal{I}^{*} \\
+        \mathcal{I}\mathcal{L}V & \mathcal{I}\mathcal{L}V\mathcal{L}^{*}\mathcal{I}^{*}
+    \end{pmatrix}=
+    \begin{pmatrix}
+        C_{11} & C_{12} \\
+        C_{21} & C_{22}
+    \end{pmatrix}
+\end{equation*}
+i.e. $C_{11}:=V, C_{12}:=V\mathcal{L}^{*}\mathcal{I}^{*},C_{21}=\mathcal{I}\mathcal{L}V,C_{22}:=\mathcal{I}\mathcal{L}V\mathcal{L}^{*}\mathcal{I}^{*}$. If we now define the following bounded operator $Q:H\rightarrow H$ by
+\begin{equation*}
+    Q = \begin{pmatrix}
+            0 & 0 \\
+            C_{22}^{-1}C_{21} & I
+        \end{pmatrix} =
+        \begin{pmatrix}
+            0 & 0 \\
+            \hat{Q} & I
+        \end{pmatrix}
+\end{equation*}
+where $\hat{Q}:=C_{22}^{-1}C_{21}:H_{1}\rightarrow H_{2}$ we can easily check that such an operator $Q$ is an (C-symmetric) oblique projection onto $H_{2}$. Since $Q$ is not $0$ we have by Theorem \textcolor{blue}{\ref{condition_gaussian_hilbert}} that the mean of the conditional distribution (\ref{conditionalDistnFixed_f}) is given by $\hat{Q}^{*}F$. Now $C_{22}$ and therefore $C_{22}^{-1}$ are self-adjoint and further we have $C_{12}^{*}=C_{21}$ and so we can easily deduce that $\hat{Q}^{*}=C_{12}C_{22}^{-1}$ and so the mean is given by:
+\begin{equation}
+    \hat{Q}^{*}F=C_{12}C_{22}^{-1}F=V\mathcal{L}^{*}\mathcal{I}^{*}(\mathcal{I}\mathcal{L}V\mathcal{L}^{*}\mathcal{I}^{*})^{-1}F=a
+\end{equation}
+where $a$ is what we had in (\ref{post_mean_before_averaging}). We thus see that the conditioning step is justified and we indeed obtain what was claimed in Section \textcolor{blue}{\ref{general_framework}}. \qedsymbol
+
 \subsection{Detailed computations for the proof of Proposition \textcolor{blue}{\ref{first_prop}}}
 
 We provide here details of the computation of the following integral needed for the proof of Proposition \textcolor{blue}{\ref{first_prop}}:
@@ -200,7 +268,33 @@ We now proceed to obtain an upper-bound on the third and final term in the bound
 where $\gamma_{2}:=\beta\tilde{C}\|\bar{f}\|_{L^{2}(\Omega)}\|\Sigma_{1}\|_{\infty}+\|m_{1}\|_{L^{2}(\Omega)}\gamma_{1}>0$ is a constant independent of $h$. Now, using these two bounds, together with the bound on $\|m_1-m_2\|_{L^{2}(\Omega)}$ we have:
 \begin{align*}
     \|m^{(1)}_{u|\mathbf{v}}-m^{(2)}_{u|\mathbf{v}}\|_{L^{2}(\Omega)} &\leq \tilde{C}h^{2}\|\bar{f}\|_{L^{2}(\Omega)}+\gamma_{1}\|\mathbf{v}\|h^{2}+\gamma_{2}h^{2}+\mathcal{O}(h^{4}) \\
-    &=(\tilde{C}\|\bar{f}\|_{L^{2}(\Omega)}+\gamma_{1}\|\mathb{v}\|+\gamma_{2})h^{2}+\mathcal{O}(h^4) \\
+    &=(\tilde{C}\|\bar{f}\|_{L^{2}(\Omega)}+\gamma_{1}\|\mathbf{v}\|+\gamma_{2})h^{2}+\mathcal{O}(h^4) \\
     &=\tilde{\gamma}h^{2}+\mathcal{O}(h^4)
 \end{align*}
-where $\tilde{\gamma}:=\tilde{C}\|\bar{f}\|_{L^{2}(\Omega)}+\gamma_{1}\|\mathb{v}\|+\gamma_{2}>0$ is a constant independent of $h$.
+where $\tilde{\gamma}:=\tilde{C}\|\bar{f}\|_{L^{2}(\Omega)}+\gamma_{1}\|\mathbf{v}\|+\gamma_{2}>0$ is a constant independent of $h$. Having dealt with the difference of the posterior means we now move onto the term involving the difference of the posterior covariances. We compute:
+\begin{align*}
+    \|\Sigma^{(1)}_{u|\mathbf{v}}-\Sigma^{(2)}_{u|\mathbf{v}}\|_{1} &= \|\Sigma_{1}-\Sigma_{1}S^{*}B_{1}^{-1}S\Sigma_{1}-\Sigma_{2}+\Sigma_{2}S^{*}B_{2}^{-1}S\Sigma_{2}\|_{1} \\
+    &\leq\|\Sigma_{1}-\Sigma_{2}\|_{1}+\|\Sigma_{1}S^{*}B_{1}^{-1}S\Sigma_{1}-\Sigma_{2}S^{*}B_{2}^{-1}S\Sigma_{2}\|_{1}
+\end{align*}
+We now bound the second term above as follows:
+\begin{align*}
+    \|\Sigma_{1}S^{*}B_{1}^{-1}S\Sigma_{1}-\Sigma_{2}S^{*}B_{2}^{-1}S\Sigma_{2}\|_{1} &= \|\Sigma_{1}S^{*}B_{1}^{-1}S\Sigma_{1}-\Sigma_{2}S^{*}B_{2}^{-1}S\Sigma_{1}+\Sigma_{2}S^{*}B_{2}^{-1}S\Sigma_{1}-\Sigma_{2}S^{*}B_{2}^{-1}S\Sigma_{2}\|_{1} \\
+    &\leq\|(\Sigma_{1}S^{*}B_{1}^{-1}-\Sigma_{2}S^{*}B_{2}^{-1})S\Sigma_{1}\|_{1}+\|\Sigma_{2}S^{*}B_{2}^{-1}S(\Sigma_1-\Sigma_2)\|_{1} \\
+    &\leq\|\Sigma_{1}S^{*}B_{1}^{-1}-\Sigma_{2}S^{*}B_{2}^{-1}\|_{\infty}\|\Sigma_1\|_{1}+\|\Sigma_2\|_{\infty}\|B_{2}^{-1}\|_{\infty}\|\Sigma_1-\Sigma_2\|_{1}\\
+    &\leq\gamma_{1}h^{2}\|\Sigma_1\|_{1}+(\|\Sigma_{1}\|_{\infty}+\|\Sigma_{1}-\Sigma_{2}\|_{1})(\|B_{1}^{-1}\|_{\infty}+\|B_{1}^{-1}-B_{2}^{-1}\|_{\infty})\|\Sigma_{1}-\Sigma_{2}\|_{1}+\mathcal{O}(h^{4}) \\
+    &\leq\gamma_{1}\|\Sigma_1\|_{1}h^{2}+\|\Sigma_{1}\|_{\infty}\beta\gamma^{2}h^{2}+\mathcal{O}(h^4)\\
+    &=(\gamma_{1}\|Sigma_{1}\|_{1}+\beta\|\Sigma_1\|_{\infty}\gamma^{2})h^{2}+\mathcal{O}(h^4)\\
+    &=\gamma_{3}h^{2}+\mathcal{O}(h^4)
+\end{align*}
+where $\gamma_3:=\gamma_{1}\|Sigma_{1}\|_{1}+\beta\|\Sigma_1\|_{\infty}\gamma^{2}>0$ is a constant independent of $h$. Using this we can conclude:
+\begin{align*}
+    \|\Sigma^{(1)}_{u|\mathbf{v}}-\Sigma^{(2)}_{u|\mathbf{v}}\|_{1} &\leq \gamma^{2}h^{2}+\gamma_{3}h^{2}+\mathcal{O}(h^4) \\
+    &=(\gamma^{2}+\gamma_{3})h^{2}+\mathcal{O}(h^4) \\
+    &=\kappa h^2+\mathcal{O}(h^4)
+\end{align*}
+where $\kappa:=\gamma^{2}+\gamma_{3}>0$ is a constant independent of $h$. We can now combine the bounds on terms involving the posterior means and covariances to obtain:
+\begin{align*}
+    W^{2}\left(\mathcal{N}(m^{(1)}_{u|\mathbf{v}},\Sigma^{(1)}_{u|\mathbf{v}}),\mathcal{N}(m^{(2)}_{u|\mathbf{v}},\Sigma^{(2)}_{u|\mathbf{v}})\right)&\leq\kappa h^{2}+\tilde{\gamma}^{2}h^{4}+\mathcal{O}(h^{2}) \\
+    &\leq\kappa h^{2}+\mathcal{O}(h^4)
+\end{align*}
+We can thus conclude that $W\left(\mathcal{N}(m^{(1)}_{u|\mathbf{v}},\Sigma^{(1)}_{u|\mathbf{v}}),\mathcal{N}(m^{(2)}_{u|\mathbf{v}},\Sigma^{(2)}_{u|\mathbf{v}})\right)\leq\sqrt{\kappa}h+\mathcal{O}(h^2)$ as required. \qedsymbol
